@@ -18,13 +18,6 @@ PORTING:
 
 IMPORTANT KERNEL NOTES:
   - You MUST have /dev/pts turned on.
-  - If you want Bootsplash, you MUST have VESAFB enabled for 2.6,
-    other framebuffers won't work.  You MUST also enable
-    "video mode selection support" and "Framebuffer Console support"
-  - From gentoo-dev-sources-2.6.8 and above, bootsplash has been replaced
-    with gensplash.  Gensplash has the same kernel configuration requirements
-    as bootsplash, but works properly with any framebuffer device.
-  - To build a kernel with Genkernel you must have  
     "Block devices->Loopback device support"  
     "Block devices->RAM disk support"
   - To boot genkernel properly, the kernel config must have
@@ -38,7 +31,7 @@ BOOTING A KERNEL WITH INITRD:
     root=	needs to point to the ramdisk (should stay at /dev/ram0)
     init=	needs to point to the linuxrc file to execute on the ramdisk
     vga=	should be the resolution you want your screen. 0x317 is
-    		1024x768 - 16bpp and you'll get a pretty bootsplash if
+    		1024x768 - 16bpp and you'll get a pretty splash if
     		configured properly
 
   GRUB EXAMPLE ENTRY:
