@@ -61,11 +61,9 @@ EOF
 				echo -e "\tkernel /kernel-${KNAME}-${ARCH}-${KV} root=${GRUB_ROOTFS}" >> ${GRUB_CONF}
 			else
 				echo -e "\tkernel /kernel-${KNAME}-${ARCH}-${KV} root=/dev/ram0 init=/linuxrc real_root=${GRUB_ROOTFS}" >> ${GRUB_CONF}
-				if [ "${PAT}" -gt '4' -a  "${CMD_BOOTSPLASH}" != '1' ]
+				if [ "${PAT}" -gt '4' ]
 				then
 				    echo -e "\tinitrd /initramfs-${KNAME}-${ARCH}-${KV}" >> ${GRUB_CONF}
-				else
-				    echo -e "\tinitrd /initrd-${KNAME}-${ARCH}-${KV}" >> ${GRUB_CONF}
 				fi
 			fi
 			echo >> ${GRUB_CONF}
