@@ -93,10 +93,10 @@ config_kernel() {
 	fi
 
 	# Force this on if we are a 2.4 kernel or less
-	# Force this on if we are using bootsplash
 	# This is required for initrd support
 	# Initramfs doesn't require this
-	if [ "${KERN_24}" -eq '1' -o "${CMD_BOOTSPLASH}" = '1' ]
+	# TODO: force on with --genzimage
+	if [ "${KERN_24}" -eq '1' ]
 	then
 	    # Make sure Ext2 support is on...
 	    sed -i ${KERNEL_DIR}/.config -e 's/#\? \?CONFIG_EXT2_FS[ =].*/CONFIG_EXT2_FS=y/g'
