@@ -295,7 +295,7 @@ then
 		compile_devfsd
 	fi
 
-	if [ "${KERN_24}" != '1' -a  "${CMD_BOOTSPLASH}" != '1' ]
+	if [ "${KERN_24}" != '1' ]
 	then
 	    if [ "${BUSYBOX}" -eq '1' ]
 	    then
@@ -345,7 +345,7 @@ then
 		print_info 1 ''
 		print_info 1 '    Where $ROOT is the device node for your root partition as the'
 		print_info 1 '    one specified in /etc/fstab'
-	elif [ "${KERN_24}" != '1' -a  "${CMD_BOOTSPLASH}" != '1' ]
+	elif [ "${KERN_24}" != '1' ]
 	then
 		print_info 1 '    real_root=/dev/$ROOT'
 		print_info 1 ''
@@ -376,7 +376,6 @@ then
 	print_info 1 'WARNING... WARNING... WARNING...'
 	print_info 1 'Additional kernel cmdline arguments that *may* be required to boot properly...'
 	[ "${GENSPLASH}" -eq '1' ] && print_info 1 "add \"vga=791 splash=silent,theme:${GENSPLASH_THEME} console=tty1 quiet\" if you use a gensplash framebuffer ]"
-	[ "${BOOTSPLASH}" -eq '1' ] && print_info 1 'add "vga=791 splash=silent" if you use a bootsplash framebuffer'
 	[ "${LVM2}" -eq '1' ] && print_info 1 'add "dolvm2" for lvm2 support'
 	[ "${EVMS2}" -eq '1' ] && print_info 1 'add "doevms2" for evms support'
 	[ "${DMRAID}" -eq '1' ] && print_info 1 'add "dodmraid" for dmraid support'
