@@ -19,9 +19,6 @@ CLEAN="yes"
 # Run 'make mrproper' before configuration/compilation?
 MRPROPER="yes"
 
-# Copy bootsplash into the initrd image?
-BOOTSPLASH="yes"
-
 # Override the arch detection?
 # ARCH_OVERRIDE="x86"
 
