@@ -1,13 +1,8 @@
 #!/bin/bash
-# x86/config.sh
 
 KERNEL_MAKE_DIRECTIVE=""
 KERNEL_MAKE_DIRECTIVE_2=""
 KERNEL_BINARY="vmlinux.gz"
-
-# The dietlibc portion of busybox is commented out right now
-# other stuff seems to compile fine though
-USE_DIETLIBC=1
 
 [ -z "${MAKEOPTS}" ] && MAKEOPTS="-j2"
 
@@ -23,4 +18,3 @@ UTILS_AS=as
 UTILS_LD=ld
 
 COMPRESS_INITRD=yes
-BOOTSPLASH=no
