@@ -1,15 +1,10 @@
 #!/bin/bash
-# parisc/config.sh
 
 KERNEL_MAKE_DIRECTIVE="vmlinux"
 KERNEL_MAKE_DIRECTIVE_2=""
 KERNEL_BINARY="vmlinux"
 
-USE_DIETLIBC=0
-
 [ -z "${MAKEOPTS}" ] && MAKEOPTS="-j2"
-
-BOOTSPLASH=0
 
 KERNEL_MAKE=make
 UTILS_MAKE=make
@@ -23,4 +18,3 @@ UTILS_AS=as
 UTILS_LD=ld
 
 COMPRESS_INITRD=yes
-
