@@ -1,12 +1,7 @@
 #!/bin/bash
-# ppc/config.sh
 
 KERNEL_MAKE_DIRECTIVE="vmlinux"
 KERNEL_BINARY="vmlinux"
-
-# The dietlibc portion of busybox is commented out right now
-# other stuff seems to compile fine though
-USE_DIETLIBC=1
 
 [ -z "${MAKEOPTS}" ] && MAKEOPTS="-j2"
 
@@ -22,4 +17,3 @@ UTILS_AS=as
 UTILS_LD=ld
 
 COMPRESS_INITRD=yes
-
