@@ -1,13 +1,8 @@
 #!/bin/bash
-# sparc/config.sh
 
 KERNEL_MAKE_DIRECTIVE="vmlinux"
 KERNEL_MAKE_DIRECTIVE_2=""
 KERNEL_BINARY="vmlinux"
-
-# The dietlibc portion of busybox is commented out right now
-# other stuff seems to compile fine though
-USE_DIETLIBC=0
 
 [ -z "${MAKEOPTS}" ] && MAKEOPTS="-j1"
 
@@ -21,5 +16,4 @@ UTILS_AS=as
 UTILS_LD=ld
 
 COMPRESS_INITRD=yes
-BOOTSPLASH="no"
 USECOLOR="no"
