@@ -1,13 +1,8 @@
 #!/bin/bash
-#sparc64-config.sh
 
 KERNEL_MAKE_DIRECTIVE="vmlinux"
 KERNEL_MAKE_DIRECTIVE_2="image"
 KERNEL_BINARY="arch/sparc64/boot/image"
-
-# Busybox 1.00-pre3 won't build with dietlibc, when it does we
-# can turn this flag on
-USE_DIETLIBC=0
 
 [ -z "${MAKEOPTS}" ] && MAKEOPTS="-j2"
 
@@ -23,5 +18,4 @@ UTILS_AS=as
 UTILS_LD=ld
 
 COMPRESS_INITRD=yes
-BOOTSPLASH="no"
 USECOLOR="no"
