@@ -1,11 +1,8 @@
 #!/bin/bash
-# x86_64/config.sh
 
 KERNEL_MAKE_DIRECTIVE="bzImage"
 KERNEL_MAKE_DIRECTIVE_2=""
 KERNEL_BINARY="arch/x86_64/boot/bzImage"
-
-USE_DIETLIBC=1
 
 [ -z "${MAKEOPTS}" ] && MAKEOPTS="-j2"
 
@@ -21,4 +18,3 @@ UTILS_AS=as
 UTILS_LD=ld
 
 COMPRESS_INITRD=yes
-
